ui: Fix form padding and header sizing on mobile
Closes #82

--- a/ui/src/assets/css/default.css
+++ b/ui/src/assets/css/default.css
@@ -14,4 +14,15 @@
 
 .--tr-header-h1 {
     font-weight: normal;
+    padding-left: 1em;
+    padding-right: 1em;
+    font-size: 1.75em;
+}
+
+/* override for desktop browsers */
+@media only screen and (min-width: 680px) {
+    .--tr-header-h1 {
+        font-weight: normal;
+        font-size: 2em;
+    }
 }
